$Id: ChangeLog,v 1.419 2008/02/15 17:22:26 haraldkipp Exp $

2008-02-13  Harald Kipp  <harald.kipp@egnite.de>

	* configure.ac, os/version.c: Second beta, version #4.5.1.

	* crt/nut_io.h: Serious bug fix. Reconfigured FOPEN_MAX was 
	not honored by all modules.

	* dev/vscodec.c, include/dev/vscodec.h, conf/dev/dev.nut:
	The old VS1001K support routine had been done in 2002 for the 
	4MHz ATmega. In order to handle high bitrates, decoder feeding 
	was done in interrupt context. With today's 16MHz AVRs, this
	complicated processing is no longer required. Here we present a 
	new character device driver for the VLSI decoders. Note, that 
	most things are still hard coded for the AT91SAM7SE and the 
	VS1033 or VS1053. The part we are missing most is a general SPI 
	driver. Stay tuned.

	* pro/uxmlparse.c, pro/uxmlstream.c, pro/uxmltree.c,
	include/pro/uxml.h, conf/pro/pro.nut: Micro XML parser added. 
	This is a very limited and probably incomplete parser. However, 
	it allows to parse relatively large XML files on tiny systems.

	* arch/arm/dev/at91_twi.c, arch/arm/dev/debug_at91.c,
	arch/arm/dev/hd44780_at91.c, arch/arm/dev/ostimer_at91.c,
	arch/arm/dev/spimmc_at91.c, arch/arm/dev/st7036_at91.c,
	arch/arm/dev/usart0at91.c, arch/arm/dev/usart1at91.c,
	arch/arm/dev/usartat91.c, arch/arm/os/nutinit.c,
	conf/at91sam7se-ek.conf, conf/tools.nut, dev/twbbif.c,
	include/arch/arm/at91.h, include/arch/arm/at91_ebi.h,
	include/arch/arm/at91_pmc.h, include/arch/arm/at91_sdramc.h,
	include/arch/arm/at91_smc.h, include/arch/arm/irqreg.h,
	include/arch/arm.h, include/cfg/arch.h, include/dev/debug.h,
	arch/arm/init/crtat91sam7se512_rom.S, include/arch/arm/at91sam7se.h,
	arch/arm/ldscripts/at91sam7se512_rom.ld: AT91SAM7SE512 support added.

	* conf/repository.nut, conf/arch/arch.nut, conf/arch/arm.nut:
	AT91SAM7SE512 support added. Global MCU list simplifies exclusivity 
	attribute. HW_EBI_AT91 added for MCUs with external bus interface.
